--- a/.env
+++ b/.env
@@ -30,5 +30,6 @@ DATABASE_URL="mysql://root:@127.0.0.1:3306/php_bibliobus?serverVersion=8.3.0&cha
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/mailer ###
-MAILER_DSN=null://null
+# Looking to send emails in production? Check out our Email API/SMTP product!
+MAILER_DSN="smtp://29f6c863085d15:21fab0951be71b@sandbox.smtp.mailtrap.io:2525"
 ###< symfony/mailer ###
