--- a/.env
+++ b/.env
@@ -16,7 +16,7 @@
 
 ###> symfony/framework-bundle ###
 APP_ENV=dev
-APP_SECRET=
+APP_SECRET=5a5783189cb6c6767247933ed0bf62c0
 ###< symfony/framework-bundle ###
 
 ###> doctrine/doctrine-bundle ###
