--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,9 @@
         "symfony/validator": "7.2.*",
         "symfony/yaml": "7.2.*",
         "symfonycasts/reset-password-bundle": "^1.23",
-        "symfonycasts/verify-email-bundle": "^1.17"
+        "symfonycasts/verify-email-bundle": "^1.17",
+        "twig/extra-bundle": "^3.20",
+        "twig/intl-extra": "^3.20"
     },
     "config": {
         "allow-plugins": {
